# AClab2

./: CMakeLists.txt  Makefile  Makefile-1  README.md  build.ninja  main  rules.ninja
src/: main.cpp  name.cpp  name.h
